[package]
name = "swap-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "23.0.0" }
zeus-interfaces = { path = "../../crates/zeus_interfaces" }
zeus-access-control = { path = "../../crates/zeus_access_control" }

[dev-dependencies]
soroban-sdk = { version = "23.0.0", features = ["testutils"] }