[package]
name = "zk-atomic-swap-verifier"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
zeus-interfaces = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }